NU-28 comment: fixed cart image width, image block extra space, radio-box postition on pdp, error text position under inputs

--- a/app/design/frontend/Bangkok/default/web/css/source/_forms.less
+++ b/app/design/frontend/Bangkok/default/web/css/source/_forms.less
@@ -10,6 +10,9 @@
 //  _____________________________________________
 
 & when (@media-common = true) {
+  div.mage-error[generated] {
+    line-height: 20px !important;
+  }
   .fieldset {
     .arrow-up {
       background: @icon-arrow-up;
